# DietManagement

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  bot-developer.md  code-reviewer.md  test-engineer.md
.claude/skills/commit-review/: SKILL.md
.claude/skills/llm-router/: SKILL.md
.claude/skills/python-standards/: SKILL.md
.claude/skills/telegram-bot/: SKILL.md
bot/: deps.py  formatters.py  keyboards.py  main.py
bot/handlers/: error.py  meal.py  nutrition.py  profile.py
config/: settings.py
diet/: audio.py  barcode.py  image.py  meal_service.py  models.py  nutrition.py  profile_service.py
llm/: __init__.py  interface.py  pricing.py  router.py
llm/providers/: __init__.py  anthropic.py  deepseek.py  whisper.py
storage/: database.py  models.py  repositories.py
tests/: conftest.py  test_meal_service.py  test_repositories.py  test_router.py
tests/fakes/: llm.py
